# ranger-ims-server

./: .bandit  .coveragerc  .docker.conf  .dockerignore  .flake8  .gitignore  .isort.cfg  .jshintrc  .pre-commit-config.yaml  .travis.yml  API.md  CHANGELOG.md  COPYRIGHT  COPYRIGHT.md  COPYRIGHT.rst  COPYRIGHT.txt  Dockerfile  Dockerfile.dev  MANIFEST.in  README.md  README.rst  codecov.yml  dev.Dockerfile  docker-compose.yml  mypy.ini  pyproject.toml  ranger-ims-server.sublime-project  requirements-dev.txt  requirements-stable.txt  requirements.txt  sample.env  setup.py  tox.ini  tsconfig.json
.docker/: sample.env
.github/: dependabot.yml
.github/workflows/: automerge.yml  autoupdate.yaml  cicd.yml  dependabot-automerge.yml  deploy.yml  jobs.yaml
conf/: .gitignore  directory-sample.yaml  imsd-docker-compose-sample.conf  imsd-sample-docker.conf  imsd-sample.conf
docs/: conf.py  index.rst
ims/: __init__.py  auth.py  config.py  data.py  dms.py  edit.py  json.py  protocol.py  sauce.py  server.py  store.py  tz.py  util.py
ims/_streets/: _2013.py  _2014.py  _2015.py  __init__.py
ims/data/: __init__.py  edit.py  json.py  model.py  store.py
ims/data/_streets/: _2013.py  _2014.py  __init__.py
ims/data/test/: __init__.py  test_edit.py  test_json.py  test_model.py  test_store.py
ims/dms/: __init__.py  _directory.py  _dms.py  dms.py
ims/dms/test/: __init__.py  test_dms.py
ims/element/: admin.js  admin.py  admin.xhtml  admin_acl.js  admin_acl.py  admin_acl.xhtml  admin_acl_template.py  admin_acl_template.xhtml  admin_streets.js  admin_streets.py  admin_streets.xhtml  admin_template.py  admin_template.xhtml  admin_types.js  admin_types.py  admin_types.xhtml  base.py  base_footer.xhtml  base_head.xhtml  base_header.xhtml  base_nav.xhtml  file.py  home.py  ims.js  incident.js  incident.py  incident.xhtml  incident_template.py  incident_template.xhtml  login.py  login.xhtml  queue.js  queue.py  queue.xhtml  queue_template.py  queue_template.xhtml  redirect.xhtml  report.js  report.py  report.xhtml  (+8 more)
ims/service/: auth.py  config.py  error.py  eventsource.py  external.py  http.py  json.py  klein.py  log.py  query.py  service.py  tool.py  urls.py  web.py
ims/service/test/: __init__.py  test_config.py  test_edit.py
ims/store/: __init__.py  _file.py  file.py  istore.py  schema.sqlite  sqlite.py
ims/store/test/: test_file.py
ims/test/: __init__.py  test_config.py  test_data.py  test_dms.py  test_edit.py  test_json.py  test_protocol.py  test_store.py  test_tz.py
playwright/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
playwright/tests/: ims.spec.ts  tsconfig.json
requirements/: requirements-bandit.txt  requirements-coverage.txt  requirements-direct.txt  requirements-docs.txt  requirements-indirect.txt  requirements-mypy.txt  requirements-packaging.txt  requirements-safety.txt  requirements-tests.txt  requirements.txt
resources/: chart_daily.xhtml  home.xhtml  incident.xhtml  login.xhtml  queue.xhtml  report_daily.xhtml  report_shift.xhtml  shift.xhtml  style.css
resources/docs/: priorities.xhtml
src/ims/: __init__.py  tz.py
src/ims/application/: __init__.py  _api.py  _auth.py  _config.py  _eventsource.py  _external.py  _json.py  _klein.py  _main.py  _static.py  _urls.py  _web.py
src/ims/application/_auth/: __init__.py  _application.py  _provider.py
src/ims/application/auth/: __init__.py  _application.py  _provider.py
src/ims/application/test/: __init__.py  test.conf  test_config.py
src/ims/auth/: __init__.py  _exceptions.py  _provider.py
src/ims/auth/test/: __init__.py  test_provider.py
src/ims/config/: __init__.py  _config.py  _external_deps.py  _urls.py
src/ims/config/test/: __init__.py  test.conf  test_config.py
src/ims/data/: __init__.py  json.py  model.py
src/ims/data/test/: test_json.py  test_model.py
src/ims/directory/: __init__.py  _directory.py  _exceptions.py
src/ims/directory/clubhouse_db/: __init__.py  _directory.py  _dms.py
src/ims/directory/file/: __init__.py  _directory.py
src/ims/directory/test/: __init__.py  test_directory.py
src/ims/dms/: __init__.py  _auth.py  _directory.py  _dms.py
src/ims/dms/test/: test_auth.py  test_directory.py  test_dms.py
src/ims/element/: __init__.py  _element.py  _page.py  admin.py  admin_acl.py  admin_acl.xhtml  admin_streets.py  admin_types.py  admin_types.xhtml  base.py  incident.py  incident_template.py  login.py  login.xhtml  queue.js  queue.py  queue_template.py  redirect.py  report.py  report_template.py  root.py  root.xhtml
src/ims/element/admin/: _admin.py  template.xhtml
src/ims/element/admin_acl/: __init__.py  _admin_acl.py  template.xhtml
src/ims/element/admin_streets/: __init__.py  _admin_streets.py  template.xhtml
src/ims/element/admin_types/: __init__.py  _admin_types.py  template.xhtml
src/ims/element/footer/: _footer.py
src/ims/element/header/: _header.py
src/ims/element/incident/: __init__.py  _incident.py  template.xhtml
src/ims/element/incident_template/: __init__.py  _incident_template.py  template.xhtml
src/ims/element/login/: __init__.py  _login.py  template.xhtml
src/ims/ext/: __init__.py  attr.py  enum.py  enum_ext.py  frozendict.py  json.py  json_ext.py  klein.py  sqlite.py  trial.py
src/ims/legacy/: __init__.py
src/ims/model/: __init__.py  _accessentry.py  _accessvalidity.py  _address.py  _cmp.py  _convert.py  _entry.py  _event.py  _eventaccess.py  _eventdata.py  _imsdata.py  _incident.py  _location.py  _position.py  _priority.py  _ranger.py  _replace.py  _report.py  _state.py  _team.py  _type.py  strategies.py
src/ims/run/: __init__.py  _command.py  _log.py  _options.py
src/ims/service/: __init__.py  auth.py  config.py  error.py  eventsource.py  external.py  http.py  json.py  klein.py  log.py  service.py  tool.py  urls.py  web.py
src/ims/store/: __init__.py  _abc.py  _db.py  _exceptions.py  _file.py  sqlite.py
src/ims/test/: test_tz.py
test/: incidents.tgz  init_sample  reset_data  upload_new  util.sh
tools/: feed.py
tools/Docker/: Dockerfile  install.sh
tools/test/: test_feed.py
(+328 files in other folders)
